Fix spelling errors and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ html {
 }
 
 .cards strong {
-  diplay: block;
+  display: block;
   margin-bottom: 1rem;
   font-size: 1.125rem;
 }
@@ -49,7 +49,7 @@ html {
 }
 
 .cards dd {
-  display:  inline-block;
+  display: inline-block;
   margin: 0;
   min-width: 9em;
 }
